--- a/index.html
+++ b/index.html
@@ -39,11 +39,17 @@
         <ul class="header-contacts">
           <li class="header-contact">
             <a class="link header-contact-link" href="mailto:info@devstudio.com"
+              ><svg class="contact-icon" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact">
-            <a class="link header-contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link header-contact-link" href="tel:+380961111111"
+              ><svg class="contact-icon" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -62,24 +68,44 @@
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="feature-list">
             <li class="feature-item">
+              <div class="feature-wrap-icon">
+                <svg class="feature-icon">
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Внимание к деталям</h3>
               <p class="feature-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-wrap-icon">
+                <svg class="feature-icon">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Пунктуальность</h3>
               <p class="feature-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-wrap-icon">
+                <svg class="feature-icon">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Планирование</h3>
               <p class="feature-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-wrap-icon">
+                <svg class="feature-icon">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Современные технологии</h3>
               <p class="feature-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -120,6 +146,52 @@
               <div class="team-content">
                 <h3 class="team-title">Игорь Демьяненко</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a
+                      href=""
+                      class="link social-link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      aria-label="instagram"
+                      ><svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href=""
+                      class="link social-link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      aria-label="twitter"
+                      ><svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href=""
+                      class="link social-link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      aria-label="facebook"
+                      ><svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href=""
+                      class="link social-link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      aria-label="linkedin"
+                      ><svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -127,6 +199,52 @@
               <div class="team-content">
                 <h3 class="team-title">Ольга Репина</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a
+                      href=""
+                      class="link social-link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      aria-label="instagram"
+                      ><svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href=""
+                      class="link social-link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      aria-label="twitter"
+                      ><svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href=""
+                      class="link social-link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      aria-label="facebook"
+                      ><svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href=""
+                      class="link social-link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      aria-label="linkedin"
+                      ><svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -139,6 +257,52 @@
               <div class="team-content">
                 <h3 class="team-title">Николай Тарасов</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a
+                      href=""
+                      class="link social-link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      aria-label="instagram"
+                      ><svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href=""
+                      class="link social-link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      aria-label="twitter"
+                      ><svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href=""
+                      class="link social-link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      aria-label="facebook"
+                      ><svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href=""
+                      class="link social-link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      aria-label="linkedin"
+                      ><svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -146,36 +310,177 @@
               <div class="team-content">
                 <h3 class="team-title">Михаил Ермаков</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a
+                      href=""
+                      class="link social-link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      aria-label="instagram"
+                      ><svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href=""
+                      class="link social-link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      aria-label="twitter"
+                      ><svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href=""
+                      class="link social-link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      aria-label="facebook"
+                      ><svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href=""
+                      class="link social-link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      aria-label="linkedin"
+                      ><svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Our clients -->
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="clients">
+            <li class="client">
+              <a href="" class="link client-link" target="_blank" rel="noopener noreferrer nofollow"
+                ><svg class="client-icon">
+                  <use href="./images/symbol-defs.svg#icon-company-1"></use></svg
+              ></a>
+            </li>
+            <li class="client">
+              <a href="" class="link client-link" target="_blank" rel="noopener noreferrer nofollow"
+                ><svg class="client-icon">
+                  <use href="./images/symbol-defs.svg#icon-company-2"></use></svg
+              ></a>
+            </li>
+            <li class="client">
+              <a href="" class="link client-link" target="_blank" rel="noopener noreferrer nofollow"
+                ><svg class="client-icon">
+                  <use href="./images/symbol-defs.svg#icon-company-3"></use></svg
+              ></a>
+            </li>
+            <li class="client">
+              <a href="" class="link client-link" target="_blank" rel="noopener noreferrer nofollow"
+                ><svg class="client-icon">
+                  <use href="./images/symbol-defs.svg#icon-company-4"></use></svg
+              ></a>
+            </li>
+            <li class="client">
+              <a href="" class="link client-link" target="_blank" rel="noopener noreferrer nofollow"
+                ><svg class="client-icon">
+                  <use href="./images/symbol-defs.svg#icon-company-5"></use></svg
+              ></a>
+            </li>
+            <li class="client">
+              <a href="" class="link client-link" target="_blank" rel="noopener noreferrer nofollow"
+                ><svg class="client-icon">
+                  <use href="./images/symbol-defs.svg#icon-company-6"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer-page">
-      <div class="container">
-        <a class="logo logo-footer" href="./index.html"
-          >Web<span class="logo-secondary">Studio</span></a
-        >
-        <address>
-          <ul class="contact-list">
-            <li class="contact-item">
+      <div class="container footer-container">
+        <div class="address-wrap">
+          <a class="logo logo-footer" href="./index.html"
+            >Web<span class="logo-secondary">Studio</span></a
+          >
+          <address>
+            <ul class="contact-list">
+              <li class="contact-item">
+                <a
+                  class="footer-address"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  href="https://goo.gl/maps/fvT6WCYQJmj6T4Yx8"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="contact-item">
+                <a class="footer-contact" href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li class="contact-item">
+                <a class="footer-contact" href="tel:+380991111111">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div>
+          <h2 class="title-social">присоединяйтесь</h2>
+          <ul class="footer-social">
+            <li>
               <a
-                class="footer-address"
+                href=""
+                class="link social-link footer-social-link"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
-                href="https://goo.gl/maps/fvT6WCYQJmj6T4Yx8"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+                aria-label="instagram"
+                ><svg class="social-icon footer-social-icon">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+              ></a>
             </li>
-            <li class="contact-item">
-              <a class="footer-contact" href="mailto:info@example.com">info@example.com</a>
+            <li>
+              <a
+                href=""
+                class="link social-link footer-social-link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                aria-label="twitter"
+                ><svg class="social-icon footer-social-icon">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+              ></a>
             </li>
-            <li class="contact-item">
-              <a class="footer-contact" href="tel:+380991111111">+38 099 111 11 11</a>
+            <li>
+              <a
+                href=""
+                class="link social-link footer-social-link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                aria-label="facebook"
+                ><svg class="social-icon footer-social-icon">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a
+                href=""
+                class="link social-link footer-social-link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                aria-label="linkedin"
+                ><svg class="social-icon footer-social-icon">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
